fixing some features

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <button type="button" data-btn="1" class="filter-button my-2 border-2 border-yellow-500 rounded-xl text-2xl mx-2 w-36 hover:border-none hover:bg-yellow-300 hover:text-white uppercase">Burgerler</button>
         <button type="button" data-btn="2" class="filter-button border-2 border-yellow-500 rounded-xl text-2xl mx-2 w-36 hover:border-none hover:bg-yellow-300 hover:text-white uppercase">Hot Dog</button>
         <button type="button" data-btn="3" class="filter-button border-2 border-yellow-500 rounded-xl text-2xl mx-2 hover:border-none hover:bg-yellow-300 hover:text-white uppercase">&nbsp;&nbsp;Destek Lezzetler&nbsp;&nbsp;</button>
-        <button type="button" data-btn="4" class="filter-button border-2 border-yellow-500 rounded-xl text-2xl mx-2 w-36 hover:border-none hover:bg-yellow-300 hover:text-white uppercase">İçecekler</button>
+        <button type="button" data-btn="4" class=" mt-2 filter-button border-2 border-yellow-500 rounded-xl text-2xl mx-2 w-36 hover:border-none hover:bg-yellow-300 hover:text-white uppercase">İçecekler</button>
     </div>
 </section>
 
