--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 <!-- Extra Menu -->
 <section>
     <div class="container mx-auto mt-8 flex flex-wrap justify-center items-center">
-        <div class="container mx-auto w-48 h-44 border-2 border-yellow-500 mb-4 flex flex-col justify-center items-center rounded-xl">
-            <h3 class="text-xl text-center underline mt-2 uppercase">Ekmek Seçİmİ</h3>
+        <div class="container mx-auto w-48 h-44 border-2 border-yellow-500 mb-4 flex flex-col rounded-xl ">
+            <div class=""><h3 class="text-xl text-center underline  uppercase mt-4">Ekmek Seçİmİ</h3></div>
             <p class="text-center text-yellow-500">Klasik Buğday Ekmeği</p>
             <p class="text-center text-yellow-500">Tam Buğday Ekmeği</p>
         </div>        
