--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 
 <!-- Menu -->
 <section >
-    <div class="container mx-auto w-full h-[800px] border-2 border-yellow-500 content-div rounded-xl text-center hidden" id="content1" >
+   <!--  <div class="container mx-auto w-full h-[800px] border-2 border-yellow-500 content-div rounded-xl text-center hidden" id="content1" > -->
+    <div class="container mx-auto w-full sm:w-3/4 md:w-2/3 lg:w-1/2 h-[800px] sm:h-[600px] md:h-[500px] lg:h-[400px] border-2 border-yellow-500 content-div rounded-xl text-center hidden" id="content1">
         <h2 class="text-2xl underline mt-4 uppercase">Burgerler</h2>
         <h3 class="text-l uppercase mt-2">Single/Medium/Double</h3>
         <h3 class="text-sm">(120gr) (170gr) (2x120gr)</h3>
