--- a/index.html
+++ b/index.html
@@ -244,7 +244,9 @@
     <span class=" text-center block text-sm text-black sm:text-center ">© 2023 
         <a href="index.html" class="hover:underline">The Juicy Lucy Burger</a>. All Rights Reserved.
     </span>
-    <p class="text-center text-xs ">Designed By <a href="https://buroworkss.netlify.app/" class="underline" target="_blank">BuroW</a></p>
+    <p class="text-center text-xs ">Designed By 
+        <a href="https://buroworkss.netlify.app/" class="underline" target="_blank">BuroW</a>
+    </p>
 </footer>
 
 
