--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         </div>
         <div class="container mx-auto w-48 h-44 border-2 border-yellow-500 mb-4 flex flex-col justify-center items-center rounded-xl">
             <h3 class="text-xl text-center underline uppercase">Ücretlİ</h3>
+            <h3 class="text-xl text-center underline uppercase">Ücretlİ</h3>
             <ul>
                 <li class="text-center text-yellow-500">Karamelize Soğan&nbsp;&nbsp;9&#8378;</li>
                 <li class="text-center text-yellow-500">Chedar/Kaşar&nbsp;&nbsp;15&#8378;</li>
