--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         <a href="index.html" class="hover:underline">The Juicy Lucy Burger</a>. All Rights Reserved.
     </span>
     <p class="text-center text-xs ">Designed By 
-        <a href="https://buroworkss.netlify.app/" class="underline" target="_blank">BuroW</a>
+        <a href="https://wburo.netlify.app/" class="underline" target="_blank">BuroW</a>
     </p>
 </footer>
 
