--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
             <p class="inline-block text-footer-rgb text-center text-xl">Cuma:  11.15-21.30</p>
             <p class="inline-block text-footer-rgb text-center text-xl">Cumartesi:  11.15-21.30</p>
             <p class="inline-block text-footer-rgb text-center text-xl">Pazar:  12.30-21.30</p>
+            <p class="inline-block text-footer-rgb text-center text-xl">Pazar:  12.30-21.30</p>
         </div>
     </div>
     
