--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
             <p class="inline-block text-footer-rgb text-center text-xl">Pazar:  12.30-21.30</p>
             <p class="inline-block text-footer-rgb text-center text-xl">Pazar:  12.30-21.30</p>
             <p class="inline-block text-footer-rgb text-center text-xl">Pazar:  12.30-21.30</p>
+            <p class="inline-block text-footer-rgb text-center text-xl">Pazar:  12.30-21.30</p>
         </div>
     </div>
     
